change POST /messages to PUT /messages; fix tests
